# rewardhackwatch

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  PROMOTION_CHECKLIST.md  README.md  SECURITY.md  TESTING_CHECKLIST.md  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements.txt
assets/: README.md
configs/: alerts.yaml  api.yaml  balanced.yaml  benchmark.yaml  cheap_local.yaml  claude_judge.yaml  dashboard.yaml  default.yaml  development.yaml  docker.yaml  high_accuracy.yaml  llama_judge.yaml  logging.yaml  metrics.yaml  patterns.yaml  production.yaml  testing.yaml  thresholds.yaml  training.yaml
docs/: ARCHITECTURE.md  REFERENCES.md  RELATED_WORK.md  REPRODUCIBILITY.md  RMGI_DEFINITION.md  RMGI_METHODOLOGY.md  TECHNICAL_REPORT.md  _config.yml  index.html  index.md  references.bib
examples/: __init__.py  analyze_trajectory.py  api_client.py  api_integration.py  basic_usage.py  batch_processing.py  custom_detector.py  custom_patterns.py  dashboard_embedding.py  example_integration.py  example_notebook.ipynb  example_usage.py  llm_judge_usage.py  rmgi_tracking.py  training_pipeline.py  trajectory_analysis.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
models/: hack_classifier_sklearn_gb_sklearn_gb.pkl  hack_classifier_sklearn_lr_sklearn_lr.pkl  hack_classifier_sklearn_rf_sklearn_rf.pkl  results.json  training_results.json
notebooks/: RewardHackWatch_Demo.ipynb
paper/: main.tex
reports/: FINAL_AUDIT_REPORT.json  audit_code_health.json
results/: ablation_final.md  ablation_study.json  ablation_study.md  benchmark_comparison.md  benchmark_results.txt  external_validation.md  final_research_summary.json  full_benchmark.md  full_benchmark.txt  full_benchmark_results.json  full_validation_results.json  honest_evaluation.md  honest_results_summary.json  judge_calibration.json  judge_calibration.md  judge_comparison.json  judge_comparison.md  judge_comparison_final.md  main_results.md  main_results_realistic.md  overnight_training_results.json  research_validation_results.json  retrain_combined.json
rewardhackwatch/: __init__.py  __main__.py  cli.py
scripts/: analyze_lagged_rmgi.py  analyze_results.py  build_hackbench.py  check_health.py  compute_detection_delay.py  convert_real_data.py  download_malt.py  download_shade.py  evaluate_model.py  export_model.py  format_code.py  generate_docs.py  generate_paper_figures.py  generate_synthetic.py  generate_synthetic_data.py  retrain_combined.py  run_all_experiments.sh  run_baseline_comparison.py  run_benchmarks.py  run_evasion_tests.py  run_rmgi_ablation.py  run_specificity_experiment.py  run_tests.py  run_transfer_study.py  setup_ollama.py  start_api.py  start_dashboard.py  train_distilbert.py  train_overnight.py
tests/: test_alert_system.py  test_analyzers.py  test_analyzers_new.py  test_api.py  test_api_endpoints.py  test_ast_detector_extended.py  test_base_detector.py  test_base_judge.py  test_base_tracker.py  test_benchmark_runner.py  test_cli.py  (+39 more)
(+791 files in other folders)
