[project]
name = "rewardhackwatch"
version = "1.0.0"
description = "Real-time detection of reward hacking to misalignment generalization in LLM agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Aerosta Research", email = "research@aerosta.ai"}
]
keywords = ["llm", "safety", "reward-hacking", "misalignment", "pytorch", "llama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "safetensors>=0.3.0",
    "datasets>=2.14.0",

    # LLM APIs
    "anthropic>=0.20.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",

    # API
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",

    # Dashboard
    "streamlit>=1.20.0",
    "plotly>=5.10.0",

    # Analysis
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "ruptures>=1.1.9",  # Changepoint detection

    # Utils
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.60.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
rewardhackwatch = "rewardhackwatch.cli:app"

[project.urls]
Homepage = "https://github.com/aerosta/rewardhackwatch"
Documentation = "https://github.com/aerosta/rewardhackwatch#readme"
Repository = "https://github.com/aerosta/rewardhackwatch"
Issues = "https://github.com/aerosta/rewardhackwatch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rewardhackwatch"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    "data/external/",
    "notebooks/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # Line too long
    "E402",   # Module level import not at top of file
    "E722",   # Do not use bare except
    "E741",   # Ambiguous variable name
    "N806",   # Variable in function should be lowercase
    "N812",   # Lowercase imported as non-lowercase
    "F401",   # Imported but unused (in try/except blocks)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=rewardhackwatch --cov-report=term-missing"
